[gd_scene load_steps=14 format=3 uid="uid://du3c4sggl587r"]

[ext_resource type="PackedScene" uid="uid://dey3vrrqpebvc" path="res://scenes/actor/enemy/enemy.tscn" id="1_uep73"]
[ext_resource type="Script" path="res://scenes/actor/enemy/shield_knight/shield_knight.gd" id="2_kmqjf"]
[ext_resource type="Shader" path="res://scenes/actor/actor.gdshader" id="2_mkpqr"]
[ext_resource type="Texture2D" uid="uid://gg61tcxp0wm4" path="res://assets/sprites/oryx_16bit_fantasy_creatures_trans.png" id="4_6gu5s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sosec"]
resource_local_to_scene = true
shader = ExtResource("2_mkpqr")
shader_parameter/whitening = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_rouve"]
atlas = ExtResource("4_6gu5s")
region = Rect2(360, 144, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3ame"]
atlas = ExtResource("4_6gu5s")
region = Rect2(360, 120, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_0jqvi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rouve")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3ame")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rouve")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_447o8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:material:shader_parameter/whitening")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShadowSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShadowSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CharacterSprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CharacterSprite:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_fxbbj"]
resource_name = "jump"
length = 0.1
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -12), Vector2(0, -18)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShadowSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShadowSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_wgs6i"]
resource_name = "take_damage"
length = 0.5
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:material:shader_parameter/whitening")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [0.5, 0.0, 0.5, 0.0]
}

[sub_resource type="Animation" id="Animation_t8ghi"]
resource_name = "pre_attack"
length = 0.5
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:material:shader_parameter/whitening")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [0.5, 0.0, 0.5, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n7gkm"]
_data = {
"RESET": SubResource("Animation_447o8"),
"jump": SubResource("Animation_fxbbj"),
"pre_attack": SubResource("Animation_t8ghi"),
"take_damage": SubResource("Animation_wgs6i")
}

[node name="ShieldKnight" instance=ExtResource("1_uep73")]
script = ExtResource("2_kmqjf")
move_speed = 7
points = 300
health = 7
base_damage = 2

[node name="CharacterSprite" parent="." index="1"]
material = SubResource("ShaderMaterial_sosec")
sprite_frames = SubResource("SpriteFrames_0jqvi")

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_n7gkm")
}

[node name="WalkingTimer" type="Timer" parent="." index="5"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="PreAttackTimer" type="Timer" parent="." index="6"]
wait_time = 3.0
one_shot = true

[node name="AttackTimer" type="Timer" parent="." index="7"]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="WalkingTimer" to="." method="_on_walking_timer_timeout"]
[connection signal="timeout" from="PreAttackTimer" to="." method="_on_pre_attack_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
